fixing stretched out arrow
cc @jlthibault

--- a/assets/_sass/components/_video-tabs.scss
+++ b/assets/_sass/components/_video-tabs.scss
@@ -95,7 +95,7 @@
   }
 
   &:after {
-    @include triangle(.8rem 1rem, $white, right);
+    @include triangle(.8rem .8rem, $white, right);
     content: '';
     position: absolute;
     right: 1.5rem;
